# rust-node-protobuf-interop

./: Cargo.toml  build.rs  index.js  package-lock.json  package.json
src/: main.rs  messages.proto
